Create collection and collection_manager

--- a/lib/belts/templates/app/systems/spinner_system.rb.tt
+++ b/lib/belts/templates/app/systems/spinner_system.rb.tt
@@ -5,7 +5,7 @@ class SpinnerSystem < BeltsEngine::System
   def update
     speed = @time.delta_time * 30
 
-    spinners.each do |data|
+    spinners.each do |id, data|
       data => {transform:}
 
       transform.rotation.x += speed
