--- a/lib/belts/templates/app/prefabs/spinning_cube.rb.tt
+++ b/lib/belts/templates/app/prefabs/spinning_cube.rb.tt
@@ -1,4 +1,4 @@
 class SpinningCube < BeltsEngine::Prefab
-  renderer :cube, color: Vec3[0, 0, 1]
+  component :render_data, RenderData.new(:cube, Vec3.right)
   component :spinner, Spinner.new
 end
