--- a/belts/lib/belts/templates/app/systems/spinner_system.rb.tt
+++ b/belts/lib/belts/templates/app/systems/spinner_system.rb.tt
@@ -6,9 +6,7 @@ class SpinnerSystem < BeltsEngine::System
     speed = @time.delta_time * 30
 
     spinners.each_with_components do |transform:, **|
-      transform.rotation.x += speed
-      transform.rotation.y += speed
-      transform.rotation.z += speed
+      transform.rotate(speed, speed, speed)
     end
   end
 end
