--- a/belts/lib/belts/templates/app/prefabs/camera_3d.rb.tt
+++ b/belts/lib/belts/templates/app/prefabs/camera_3d.rb.tt
@@ -1,3 +1,3 @@
 class Camera3d < BeltsEngine::Prefab
-  component :camera_data, CameraData.new(:perspective)
+  component :camera, Camera.new(:perspective)
 end
